# mapper-api

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_EXAMPLES.md  DATABASE.md  Dockerfile  FIGMA_WORKFLOW_EXAMPLES.md  GLOBAL_MAPPINGS.md  QUICK_TEST_REFERENCE.md  README.md  TEST_API.md  USER_MAPPINGS.md  WORKFLOW.md  WORKFLOW_EXAMPLE.md  WORKFLOW_SIMPLE.md  apple_workoutkit_dtos.json  apple_workoutkit_samples.json  package.json  pytest.ini  render.yaml  requirements.txt  run_tests.sh  test_hiit_workout.json
program_api/: .gitignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
program_api/api/: __init__.py  deps.py
program_api/api/routers/: __init__.py  generation.py  health.py  programs.py  progression.py
program_api/application/: __init__.py  exceptions.py
program_api/application/ports/: __init__.py  exercise_repository.py  program_repository.py  template_repository.py
program_api/backend/: __init__.py  main.py  settings.py
program_api/core/: __init__.py  constants.py  sanitization.py
program_api/infrastructure/: __init__.py  calendar_client.py
program_api/infrastructure/db/: __init__.py  exercise_repository.py  program_repository.py  template_repository.py
program_api/models/: __init__.py  generation.py  program.py
program_api/services/: __init__.py  exercise_selector.py  periodization.py  program_generator.py  program_validator.py  progression_engine.py  template_selector.py
program_api/services/llm/: __init__.py  client.py  prompts.py  schemas.py
program_api/tests/: __init__.py  conftest.py
(+340 files in other folders)
